<?xml version="1.0"?>
<package>
  <name>motion_adaption</name>
  <version>0.0.1</version>
  <description>
    The motion_adaption_node uses the transforms of the tracked end points of the operator, first normalises and then
    scales them according to the operator's and robot's body proportions and finally maps them onto the robot. The
    orientation of each end point is mapped unchanged.
  </description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/motion_adaption</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>