<?xml version="1.0"?>
<package>
  <name>motion_retargeting_controller</name>
  <version>0.0.1</version>
  <description>
    The motion retargeting coordinator controls the data flow between the target end point poses, IK calculations,
    self-collision checking and the final output of target joint positions.
  </description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/motion_retargeting</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>motion_adaption</build_depend>
  <build_depend>tree_kinematics</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>motion_adaption</run_depend>
  <run_depend>tree_kinematics</run_depend>
</package>
