<?xml version="1.0"?>
<package>
  <name>moveit_collision_checking</name>
  <version>0.0.0</version>
  <description>Integration of MoveIt's collision checking capability for motion retargeting</description>
  <license>BSD</license>

  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>

  <url type="bugtracker">https://github.com/pal-robotics/reem_teleop/issues</url>
  <url type="repository">https://github.com/pal-robotics/reem_teleop</url>
  <url type="website">http://ros.org/wiki/moveit_collision_checking</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>motion_retargeting</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>motion_retargeting</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>roscpp</run_depend>
</package>