<?xml version="1.0"?>
<package>
  <name>reem_motion_retargeting_controller</name>
  <version>0.0.1</version>
  <description>A motion retargeting controller for PAL Robotics' REEM</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/pal-robotics/reem_teleop/issues</url>
  <url type="repository">https://github.com/pal-robotics/reem_teleop</url>
  <url type="website">http://ros.org/wiki/reem_motion_retargeting_controller</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>motion_retargeting</build_depend>
  <build_depend>motion_adaption</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tree_kinematics</build_depend>
  <run_depend>motion_retargeting</run_depend>
  <run_depend>motion_adaption</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tree_kinematics</run_depend>
</package>