<?xml version="1.0"?>
<package>
  <name>robosem_motion_retargeting_controller</name>
  <version>0.0.1</version>
  <description>
    A motion retargeting controller for Yujin Robot's Robosem
  </description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robosem_motion_retargeting_controller</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>motion_adaption</build_depend>
  <build_depend>motion_retargeting</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tree_kinematics</build_depend>

  <run_depend>motion_adaption</run_depend>
  <run_depend>motion_retargeting</run_depend>
  <run_depend>openni_tracker</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tree_kinematics</run_depend>
</package>
